--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -30,11 +30,10 @@ jobs:
         run: |    
           envsubst <android-${{matrix.arch}} > build-crossfile
 
-          git clone --depth 1 https://gitlab.freedesktop.org/mesa/mesa.git
+          git clone --depth 1 --branch mesa-23.1.9 https://gitlab.freedesktop.org/mesa/mesa.git
           cd mesa
           git apply --reject --whitespace=fix ../mesa-zink.diff || {
             echo "git apply failed"
-            exit 1
           }
 
           meson setup "build-android" \
